--- a/Project64.vcxproj.filters
+++ b/Project64.vcxproj.filters
@@ -513,4 +513,9 @@
   <ItemGroup>
     <Library Include="Compression\zlibstat.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="PJ64_2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
