Drop Good Name and Internal Name inside the RDS, RDI, CDB, and RDN Instead use Name, implementation in RomTools_Common and it is kept as a global in rom.c Also clean up code and use one unified place to read the internal name of the game Do a Coiniitalize(NULL) and Coinitialize before/after calling SHBrowseForFolder in RomBrowser, should already be initialized but it seems to not be... Some general cleanups here and there, format changes using Microsoft tool and some squashed warnings

--- a/Project64.vcxproj
+++ b/Project64.vcxproj
@@ -79,6 +79,7 @@
     <IntDir>.\Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
     <TargetName>$(ProjectName)_Debug</TargetName>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release External|Win32'">
     <OutDir>..\PJ64_1.6.1\</OutDir>
@@ -95,12 +96,14 @@
     <TargetName>$(ProjectName)_1.6.1_XP</TargetName>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <RunCodeAnalysis>false</RunCodeAnalysis>
+    <EnableMicrosoftCodeAnalysis>true</EnableMicrosoftCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IntDir>.\Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
     <OutDir>..\PJ64_1.6.1\</OutDir>
     <TargetName>$(ProjectName)_Release</TargetName>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -178,6 +181,7 @@
       <TreatWarningAsError>false</TreatWarningAsError>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
