"Have Debugger" and "Show More Errors" can now be set through the Advanced Settings Tab under Options Removed some code for RSP/RDP Delays (This was not in use anymore) Removed reference to "Default" for RDRAM Rom selection

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -263,23 +263,21 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     CTEXT           "Most of these changes will not take effect till a new rom is opened or current rom is reset.",IDC_INFO,4,10,223,22
-    GROUPBOX        "",IDC_STATIC,2,119,227,73
-    CONTROL         "Always overwrite default settings with ones from ini?",IDC_USEINI,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,144,218,11
-    CONTROL         "Automatically compress instant saves",IDC_ZIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,159,218,11
-    GROUPBOX        "Core Defaults",IDC_CORE_DEFAULTS,4,37,223,78
+    GROUPBOX        "",IDC_STATIC,0,102,227,78
+    CONTROL         "Automatically compress instant saves",IDC_ZIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,118,218,11
+    GROUPBOX        "Core Defaults",IDC_CORE_DEFAULTS,4,35,223,61
     LTEXT           "CPU core style:",IDC_TEXT2,9,49,108,12
     COMBOBOX        IDC_CPU_TYPE,118,48,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Self-mod code method:",IDC_TEXT3,9,65,108,12
     COMBOBOX        IDC_SELFMOD,118,64,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Default Memory Size:",IDC_TEXT4,9,82,108,12
-    COMBOBOX        IDC_RDRAM_SIZE,118,80,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Advanced Block Linking:",IDC_TEXT5,9,98,108,12
-    COMBOBOX        IDC_ABL,118,96,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Advanced Block Linking:",IDC_TEXT5,9,82,108,12
+    COMBOBOX        IDC_ABL,118,80,105,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Start Emulation when rom is opened?",IDC_START_ON_ROM_OPEN,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,129,218,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,105,218,11
     CONTROL         "Clear Memory at Start of Emulation",IDC_CLEAR_MEMORY,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,174,218,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,133,218,11
+    CONTROL         "Enable Debugger",IDC_USEDEBUGGER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,148,71,10
+    CONTROL         "Show More Error Messages",IDC_SHOWMOREERRORS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,163,103,10
 END
 
 IDD_MANAGECHEATS DIALOGEX 0, 0, 412, 226
