Changed the About dialog with up to date information and a better design

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -515,13 +515,16 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,3,107,260,1
 END
 
-IDD_About DIALOGEX 0, 0, 303, 315
+// Changed the About dialog with up to date information and a better design - Gent (13.09.2021)
+
+IDD_About DIALOGEX 0, 0, 555, 198
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-EXSTYLE WS_EX_CLIENTEDGE
+EXSTYLE WS_EX_CLIENTEDGE | WS_EX_APPWINDOW
 CAPTION "About Project64"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         IDB_PJ64LOGO,IDB_PJ64LOGO,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_SUNKEN | WS_BORDER,0,0,303,315,WS_EX_DLGMODALFRAME | WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    CONTROL         IDB_BITMAP3,IDB_PJ64LOGO,"Static",SS_BITMAP | SS_REALSIZEIMAGE,0,0,554,197,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    PUSHBUTTON      "Close",IDOK,374,172,103,17
 END
 
 
