--- a/PJ64.rc
+++ b/PJ64.rc
@@ -517,7 +517,7 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,210,129,50,12
     LTEXT           "Please Select Language",IDC_STATIC,3,109,86,9
     COMBOBOX        IDC_LANG_SEL,5,128,112,118,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "IDB_BITMAP2",IDC_STATIC,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_SUNKEN,1,2,266,101,WS_EX_CLIENTEDGE
+    CONTROL         IDB_BITMAP2,IDC_STATIC,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_SUNKEN,1,2,266,101,WS_EX_CLIENTEDGE
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,3,122,258,1
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,3,107,260,1
 END
