Updated About Information

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -524,7 +524,7 @@ CAPTION "About Project64"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     CONTROL         IDB_BITMAP3,IDB_PJ64LOGO,"Static",SS_BITMAP | SS_REALSIZEIMAGE,0,0,554,197,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
-    PUSHBUTTON      "Close",IDOK,374,172,103,17
+    PUSHBUTTON      "Close",IDOK,374,177,103,17
 END
 
 
@@ -1012,6 +1012,11 @@ BEGIN
 END
 
 IDD_Cheats_CodeEx AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_About AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
