Modernize appearance of the ROM browser Get rid of the ugly border around the ROM browser

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -103,23 +103,23 @@ BEGIN
     DEFPUSHBUTTON   "&Close",IDC_CLOSE_BUTTON,159,180,64,14
     GROUPBOX        "",IDC_STATIC,6,0,217,175
     LTEXT           "ROM Name:",IDC_ROM_NAME,11,16,64,9
-    EDITTEXT        IDC_INFO_ROMNAME,77,15,139,13,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_ROMNAME,77,15,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "File Name:",IDC_FILE_NAME,11,31,64,9
-    EDITTEXT        IDC_INFO_FILENAME,77,30,139,13,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_FILENAME,77,30,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "Rom Size:",IDC_ROM_SIZE,11,60,64,9
-    EDITTEXT        IDC_INFO_ROMSIZE,77,60,139,13,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_ROMSIZE,77,60,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "Cartridge ID:",IDC_CART_ID,11,76,64,9
-    EDITTEXT        IDC_INFO_CARTID,77,75,139,13,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_CARTID,77,75,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "Manufacturer:",IDC_MANUFACTURER,11,92,64,9
-    EDITTEXT        IDC_INFO_MANUFACTURER,77,90,139,13,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_MANUFACTURER,77,90,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "Country:",IDC_COUNTRY,11,108,64,9
-    EDITTEXT        IDC_INFO_COUNTRY,77,105,139,13,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_COUNTRY,77,105,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "CRC1:",IDC_CRC1,11,121,64,9
-    EDITTEXT        IDC_INFO_CRC1,77,120,139,13,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_CRC1,77,120,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "CRC2:",IDC_CRC2,11,137,64,9
-    EDITTEXT        IDC_INFO_CRC2,77,135,139,13,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_CRC2,77,135,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "CIC Chip:",IDC_CIC_CHIP,11,153,64,9
-    EDITTEXT        IDC_INFO_CIC,77,150,139,13,ES_AUTOHSCROLL | ES_READONLY,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_CIC,77,150,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
     LTEXT           "Location:",IDC_LOCATION,11,45,64,10
     EDITTEXT        IDC_INFO_LOCATION,77,45,139,12,ES_AUTOHSCROLL | ES_READONLY
 END
@@ -442,8 +442,8 @@ BEGIN
     EDITTEXT        IDC_CHEAT_CODES,7,50,70,90,ES_MULTILINE | ES_UPPERCASE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
     EDITTEXT        IDC_CHEAT_OPTIONS,82,50,101,90,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_DISABLED | WS_VSCROLL | WS_HSCROLL
     EDITTEXT        IDC_NOTES,7,160,176,30,ES_MULTILINE | WS_VSCROLL
-    PUSHBUTTON      "Add Cheat",IDC_ADD,98,198,60,15,WS_DISABLED,WS_EX_CLIENTEDGE
-    PUSHBUTTON      "New Cheat",IDC_NEWCHEAT,31,198,60,15,0,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "Add Cheat",IDC_ADD,98,198,60,15,WS_DISABLED
+    PUSHBUTTON      "New Cheat",IDC_NEWCHEAT,31,198,60,15,0
     GROUPBOX        "",IDC_ADDCHEATSFRAME,2,0,188,145
     LTEXT           "Name:",IDC_NAME,7,13,33,8
     GROUPBOX        "Cheat Notes",IDC_CHEATNOTES,2,150,188,45
@@ -463,7 +463,7 @@ BEGIN
     EDITTEXT        IDC_CHEAT_CODES,7,50,70,90,ES_MULTILINE | ES_UPPERCASE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
     EDITTEXT        IDC_CHEAT_OPTIONS,82,50,101,90,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_DISABLED | WS_VSCROLL | WS_HSCROLL
     EDITTEXT        IDC_NOTES,7,160,176,30,ES_MULTILINE | WS_VSCROLL
-    PUSHBUTTON      "Update Cheat",IDC_ADD,65,198,60,15,WS_DISABLED,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "Update Cheat",IDC_ADD,65,198,60,15,WS_DISABLED
     GROUPBOX        "",IDC_ADDCHEATSFRAME,2,0,188,145
     LTEXT           "Name:",IDC_NAME,7,13,36,8
     GROUPBOX        "Cheat Notes",IDC_CHEATNOTES,2,150,188,45
@@ -512,18 +512,18 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,210,129,50,12
     LTEXT           "Please Select Language",IDC_STATIC,3,109,86,9
     COMBOBOX        IDC_LANG_SEL,5,128,112,118,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         IDB_BITMAP2,IDC_STATIC,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_SUNKEN,1,2,266,101,WS_EX_CLIENTEDGE
+    CONTROL         IDB_BITMAP2,IDC_STATIC,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_SUNKEN,1,2,266,101
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,3,122,258,1
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,3,107,260,1
 END
 
 IDD_About DIALOGEX 0, 0, 555, 198
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-EXSTYLE WS_EX_CLIENTEDGE | WS_EX_APPWINDOW
+EXSTYLE WS_EX_APPWINDOW
 CAPTION "About Project64"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         IDB_BITMAP3,IDB_PJ64LOGO,"Static",SS_BITMAP | SS_REALSIZEIMAGE,0,0,554,197,WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
+    CONTROL         IDB_BITMAP3,IDB_PJ64LOGO,"Static",SS_BITMAP | SS_REALSIZEIMAGE,0,0,554,197 | WS_EX_STATICEDGE
     PUSHBUTTON      "Close",IDOK,374,177,103,17
 END
 
