CPU Added Skip ability for Interpreter debugger Exposed some variables to C++ (For RomBrowser rewrite)
Interpreter CPU
Defined what Skip should do, may need more work in the future
Right now it increments the program counter by 4

Pif
Fixed problem with enum CIC_CHIP (C++ was including this file more than once so a guard was added)
Exposed some functions to C++ (For RomBrowser rewrite)

Plugin
Exposed plugin setup functions to C++ (For RomBrowser rewrite)

r4300i Commands
Enabled the skip button by default and added code back to the skip button so it actually does something

Rom
Added test case to see how long xxhash would take to calculate

RomBrowser
Slight rewrite to C++ (using vectors now instead of manually allocated memory)
There's a bit of debug code left in from the xxhash test case but most has been removed

RomTools_Common
Better defined the use of enum CIC_CHIP functions from Pif (Since this is in C++ it was complaining)
Also made sure to expose all the functions to C

xxhash64
Added header to make use of xxhash

--- a/Project64.vcxproj
+++ b/Project64.vcxproj
@@ -354,7 +354,7 @@
     <ClCompile Include="r4300i Memory.c" />
     <ClCompile Include="r4300i Registers.c" />
     <ClCompile Include="Real-Time Clock.c" />
-    <ClCompile Include="RomTools_Common.c" />
+    <ClCompile Include="RomTools_Common.cpp" />
     <ClCompile Include="Settings Api.c" />
     <ClCompile Include="TLB Display.c" />
     <ClCompile Include="Cheat.c" />
@@ -362,7 +362,7 @@
     <ClCompile Include="main2.cpp" />
     <ClCompile Include="MemTest.cpp" />
     <ClCompile Include="Profiling.c" />
-    <ClCompile Include="RomBrowser.c" />
+    <ClCompile Include="RomBrowser.cpp" />
     <ClCompile Include="Settings.c" />
     <ClCompile Include="Win32Timer.c" />
     <ClCompile Include="Eeprom.c" />
@@ -458,6 +458,7 @@
     <ClInclude Include="X86.h" />
     <ClInclude Include="Language.h" />
     <ClInclude Include="MemTest.h" />
+    <ClInclude Include="xxhash64.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="left.ico" />
