--- a/PJ64.rc
+++ b/PJ64.rc
@@ -103,23 +103,23 @@ BEGIN
     DEFPUSHBUTTON   "&Close",IDC_CLOSE_BUTTON,159,180,64,14
     GROUPBOX        "",IDC_STATIC,6,0,217,175
     LTEXT           "ROM Name:",IDC_ROM_NAME,11,16,64,9
-    EDITTEXT        IDC_INFO_ROMNAME,77,15,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_ROMNAME,77,15,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "File Name:",IDC_FILE_NAME,11,31,64,9
-    EDITTEXT        IDC_INFO_FILENAME,77,30,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_FILENAME,77,30,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "Rom Size:",IDC_ROM_SIZE,11,60,64,9
-    EDITTEXT        IDC_INFO_ROMSIZE,77,60,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_ROMSIZE,77,60,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "Cartridge ID:",IDC_CART_ID,11,76,64,9
-    EDITTEXT        IDC_INFO_CARTID,77,75,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_CARTID,77,75,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "Manufacturer:",IDC_MANUFACTURER,11,92,64,9
-    EDITTEXT        IDC_INFO_MANUFACTURER,77,90,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_MANUFACTURER,77,90,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "Country:",IDC_COUNTRY,11,108,64,9
-    EDITTEXT        IDC_INFO_COUNTRY,77,105,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_COUNTRY,77,105,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "CRC1:",IDC_CRC1,11,121,64,9
-    EDITTEXT        IDC_INFO_CRC1,77,120,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_CRC1,77,120,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "CRC2:",IDC_CRC2,11,137,64,9
-    EDITTEXT        IDC_INFO_CRC2,77,135,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_CRC2,77,135,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "CIC Chip:",IDC_CIC_CHIP,11,153,64,9
-    EDITTEXT        IDC_INFO_CIC,77,150,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_EX_STATICEDGE
+    EDITTEXT        IDC_INFO_CIC,77,150,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "Location:",IDC_LOCATION,11,45,64,10
     EDITTEXT        IDC_INFO_LOCATION,77,45,139,12,ES_AUTOHSCROLL | ES_READONLY
 END
@@ -443,7 +443,7 @@ BEGIN
     EDITTEXT        IDC_CHEAT_OPTIONS,82,50,101,90,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_DISABLED | WS_VSCROLL | WS_HSCROLL
     EDITTEXT        IDC_NOTES,7,160,176,30,ES_MULTILINE | WS_VSCROLL
     PUSHBUTTON      "Add Cheat",IDC_ADD,98,198,60,15,WS_DISABLED
-    PUSHBUTTON      "New Cheat",IDC_NEWCHEAT,31,198,60,15,0
+    PUSHBUTTON      "New Cheat",IDC_NEWCHEAT,31,198,60,15
     GROUPBOX        "",IDC_ADDCHEATSFRAME,2,0,188,145
     LTEXT           "Name:",IDC_NAME,7,13,33,8
     GROUPBOX        "Cheat Notes",IDC_CHEATNOTES,2,150,188,45
@@ -523,7 +523,7 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "About Project64"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         IDB_BITMAP3,IDB_PJ64LOGO,"Static",SS_BITMAP | SS_REALSIZEIMAGE,0,0,554,197 | WS_EX_STATICEDGE
+    CONTROL         IDB_BITMAP3,IDB_PJ64LOGO,"Static",SS_BITMAP | SS_REALSIZEIMAGE,0,0,554,197
     PUSHBUTTON      "Close",IDOK,374,177,103,17
 END
 
@@ -788,7 +788,7 @@ BEGIN
     BEGIN
         MENUITEM "&Reset\tF1",                  ID_CPU_RESET, GRAYED
         MENUITEM "&Pause\tF2",                  ID_CPU_PAUSE, GRAYED
-        MENUITEM "Generate Bitmap\tF3",         ID_SYSTEM_GENERATEBITMAP, GRAYED
+        MENUITEM "Screenshot Capture\tF3",         ID_SYSTEM_GENERATEBITMAP, GRAYED
         MENUITEM SEPARATOR
         MENUITEM "Limit FPS\tF4",               ID_SYSTEM_LIMITFPS
         MENUITEM SEPARATOR
