Memory viewer: Remove close button

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -130,7 +130,6 @@ CAPTION "Memory"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_ADDR_EDIT,7,7,66,12,ES_UPPERCASE
-    DEFPUSHBUTTON   "&Close",IDC_CLOSE_BUTTON,7,21,68,12
 END
 
 BLANK DIALOGEX 0, 0, 186, 94
@@ -1017,6 +1016,11 @@ BEGIN
 END
 
 IDD_About AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+MEMORY AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
