Add release version and SDK version to ROM info

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -95,13 +95,13 @@ BEGIN
     LTEXT           "Format",IDC_STATIC,12,62,24,8
 END
 
-ROM_INFO_DIALOG DIALOGEX 0, 0, 229, 202
+ROM_INFO_DIALOG DIALOGEX 0, 0, 229, 233
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Rom Information"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "&Close",IDC_CLOSE_BUTTON,159,180,64,14
-    GROUPBOX        "",IDC_STATIC,6,0,217,175
+    DEFPUSHBUTTON   "&Close",IDC_CLOSE_BUTTON,159,209,64,14
+    GROUPBOX        "",IDC_STATIC,6,0,217,204
     LTEXT           "ROM Name:",IDC_ROM_NAME,11,16,64,9
     EDITTEXT        IDC_INFO_ROMNAME,77,15,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "File Name:",IDC_FILE_NAME,11,31,64,9
@@ -110,18 +110,22 @@ BEGIN
     EDITTEXT        IDC_INFO_ROMSIZE,77,60,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "Cartridge ID:",IDC_CART_ID,11,76,64,9
     EDITTEXT        IDC_INFO_CARTID,77,75,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
-    LTEXT           "Manufacturer:",IDC_MANUFACTURER,11,92,64,9
-    EDITTEXT        IDC_INFO_MANUFACTURER,77,90,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
-    LTEXT           "Country:",IDC_COUNTRY,11,108,64,9
-    EDITTEXT        IDC_INFO_COUNTRY,77,105,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
-    LTEXT           "CRC1:",IDC_CRC1,11,121,64,9
-    EDITTEXT        IDC_INFO_CRC1,77,120,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
-    LTEXT           "CRC2:",IDC_CRC2,11,137,64,9
-    EDITTEXT        IDC_INFO_CRC2,77,135,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
-    LTEXT           "CIC Chip:",IDC_CIC_CHIP,11,153,64,9
-    EDITTEXT        IDC_INFO_CIC,77,150,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    LTEXT           "Manufacturer:",IDC_MANUFACTURER,11,122,64,9
+    EDITTEXT        IDC_INFO_MANUFACTURER,77,120,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    LTEXT           "Country:",IDC_COUNTRY,11,137,64,9
+    EDITTEXT        IDC_INFO_COUNTRY,77,135,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    LTEXT           "CRC1:",IDC_CRC1,11,151,64,9
+    EDITTEXT        IDC_INFO_CRC1,77,150,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    LTEXT           "CRC2:",IDC_CRC2,11,167,64,9
+    EDITTEXT        IDC_INFO_CRC2,77,165,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     LTEXT           "Location:",IDC_LOCATION,11,45,64,10
     EDITTEXT        IDC_INFO_LOCATION,77,45,139,12,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_INFO_CIC,77,180,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    LTEXT           "CIC Chip:",IDC_CIC_CHIP,11,183,64,9
+    LTEXT           "Release Version:",IDC_VERSION,11,93,64,9
+    EDITTEXT        IDC_INFO_VERSION,77,90,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    LTEXT           "SDK Version:",IDC_SDK,11,108,64,9
+    EDITTEXT        IDC_INFO_SDK,77,105,139,13,ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
 END
 
 MEMORY DIALOGEX 0, 0, 186, 95
@@ -548,7 +552,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 223
         TOPMARGIN, 7
-        BOTTOMMARGIN, 192
+        BOTTOMMARGIN, 223
     END
 
     "MEMORY", DIALOG
@@ -1022,6 +1026,11 @@ BEGIN
 END
 
 MEMORY AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+ROM_INFO_DIALOG AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
