--- a/PJ64.rc
+++ b/PJ64.rc
@@ -91,7 +91,7 @@ BEGIN
     EDITTEXT        IDC_MD_RANGEEND,174,42,79,12,ES_AUTOHSCROLL
     LTEXT           "Start",IDC_STATIC,12,44,17,8
     LTEXT           "End",IDC_STATIC,144,44,13,8
-    COMBOBOX        IDC_MD_FORMAT,42,60,210,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_MD_FORMAT,42,60,210,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Format",IDC_STATIC,12,62,24,8
 END
 
@@ -1031,6 +1031,11 @@ BEGIN
 END
 
 ROM_INFO_DIALOG AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_Debugger_MemDump AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
