enabled cheat dialog in fullscreen. fixed minimized cheat dialog restore when ctrl-C is pressed.

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -975,6 +975,11 @@ END
 
 IDR_CPURUNNING ACCELERATORS
 BEGIN
+    VK_F2,          ID_CPU_PAUSE,           VIRTKEY, NOINVERT
+    VK_PAUSE,       ID_CPU_PAUSE,           VIRTKEY, NOINVERT
+    VK_F1,          ID_CPU_RESET,           VIRTKEY, NOINVERT
+    VK_F7,          ID_CPU_RESTORE,         VIRTKEY, NOINVERT
+    VK_F5,          ID_CPU_SAVE,            VIRTKEY, NOINVERT
     "0",            ID_CURRENTSAVE_0,       VIRTKEY, NOINVERT
     "1",            ID_CURRENTSAVE_1,       VIRTKEY, NOINVERT
     "2",            ID_CURRENTSAVE_2,       VIRTKEY, NOINVERT
@@ -985,18 +990,14 @@ BEGIN
     "7",            ID_CURRENTSAVE_7,       VIRTKEY, NOINVERT
     "8",            ID_CURRENTSAVE_8,       VIRTKEY, NOINVERT
     "9",            ID_CURRENTSAVE_9,       VIRTKEY, NOINVERT
-    VK_ESCAPE,      ID_OPTIONS_FULLSCREEN,  VIRTKEY, NOINVERT
-    VK_F1,          ID_CPU_RESET,           VIRTKEY, NOINVERT
-    VK_F12,         ID_FILE_ENDEMULATION,   VIRTKEY, NOINVERT
-    VK_F2,          ID_CPU_PAUSE,           VIRTKEY, NOINVERT
-    VK_F3,          ID_SYSTEM_GENERATEBITMAP, VIRTKEY, NOINVERT
-    VK_F4,          ID_SYSTEM_LIMITFPS,     VIRTKEY, NOINVERT
-    VK_F5,          ID_CPU_SAVE,            VIRTKEY, NOINVERT
-    VK_F7,          ID_CPU_RESTORE,         VIRTKEY, NOINVERT
-    VK_F9,          ID_SYSTEM_GSBUTTON,     VIRTKEY, NOINVERT
-    VK_PAUSE,       ID_CPU_PAUSE,           VIRTKEY, NOINVERT
-    VK_RETURN,      ID_OPTIONS_FULLSCREEN,  VIRTKEY, ALT, NOINVERT
     "`",            ID_CURRENTSAVE_DEFAULT, ASCII,  NOINVERT
+    VK_F12,         ID_FILE_ENDEMULATION,   VIRTKEY, NOINVERT
+    VK_ESCAPE,      ID_OPTIONS_FULLSCREEN,  VIRTKEY, NOINVERT
+    VK_RETURN,      ID_OPTIONS_FULLSCREEN,  VIRTKEY, ALT, NOINVERT
+    VK_F3,          ID_SYSTEM_GENERATEBITMAP, VIRTKEY, NOINVERT
+    VK_F9,          ID_SYSTEM_GSBUTTON,     VIRTKEY, NOINVERT
+    VK_F4,          ID_SYSTEM_LIMITFPS,     VIRTKEY, NOINVERT
+    "C",            ID_OPTIONS_CHEATS,      VIRTKEY, CONTROL, NOINVERT
 END
 
 
