Add minimize button to more dialog windows
- r4300i Commands
- r4300i Registers
- Breakpoints
- TLB Entries

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -137,7 +137,7 @@ BEGIN
 END
 
 BLANK DIALOGEX 0, 0, 186, 94
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
@@ -163,7 +163,7 @@ BEGIN
 END
 
 IDD_TLB DIALOGEX 0, 0, 290, 317
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "TLB"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
@@ -1036,6 +1036,16 @@ BEGIN
 END
 
 IDD_Debugger_MemDump AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+BLANK AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_TLB AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
