--- a/Project64.vcxproj.filters
+++ b/Project64.vcxproj.filters
@@ -279,6 +279,12 @@
     <ClCompile Include="WatchPoints.cpp">
       <Filter>Source Files\Debugger Source</Filter>
     </ClCompile>
+    <ClCompile Include="Console.c">
+      <Filter>Source Files\General Source</Filter>
+    </ClCompile>
+    <ClCompile Include="IsViewer64.c">
+      <Filter>Source Files\Debugger Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BreakPoints.h">
@@ -489,6 +495,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WatchPoints.h">
+      <Filter>Header Files\Debugger Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Console.h">
+      <Filter>Header Files\General Header</Filter>
+    </ClInclude>
+    <ClInclude Include="IsViewer64.h">
       <Filter>Header Files\Debugger Headers</Filter>
     </ClInclude>
   </ItemGroup>
